--- a/collection.css
+++ b/collection.css
@@ -1,65 +1,52 @@
-/* collection.css */
-
-/* Styling for the collection dropdown */
-nav {
+/* Style the dropdown container */
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Style the dropdown button */
+  .dropdown .dropbtn {
     background-color: rgb(50, 48, 49);
     color: rgb(255, 245, 245);
     padding: 10px;
-    font-family: Arial, sans-serif;
-}
-
-nav a {
-    color: rgb(255, 245, 245);
-    text-decoration: none;
-    padding: 5px 10px;
-}
-
-nav a:hover {
-    background-color: rgb(70, 68, 69);
-    border-radius: 5px;
-}
-
-nav details {
-    display: inline-block;
-    position: relative;
-}
-
-nav summary {
+    font-size: 16px;
+    border: none;
     cursor: pointer;
-    color: rgb(255, 245, 245);
-    padding: 5px 10px;
-    display: inline-block;
-}
-
-nav summary:hover {
-    background-color: rgb(70, 68, 69);
-    border-radius: 5px;
-}
-
-nav ul {
-    background-color: #fff;
-    color: #000;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    border: 1px solid #ddd;
-    position: absolute;
-    z-index: 1;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
+  /* Style the dropdown content (hidden by default) */
+  .dropdown-content {
     display: none;
-    min-width: 150px;
-}
-
-nav details[open] ul {
-    display: block;
-}
-
-nav ul li a {
-    color: #000;
-    padding: 10px;
-    display: block;
+    position: absolute;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
+  /* Style the dropdown links */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
     text-decoration: none;
-}
-
-nav ul li a:hover {
-    background-color: #f1f1f1;
-}
+    display: block;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Show the dropdown content on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropdown button on hover */
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
+  
