--- a/collection.css
+++ b/collection.css
@@ -47,6 +47,6 @@
   
   /* Change the background color of the dropdown button on hover */
   .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #6e706e;
   }
   
