--- a/style.css
+++ b/style.css
@@ -393,6 +393,9 @@ input {
     display: flex;
     justify-content: space-around;
     max-width: 800px;
+    padding-top: 15px;
+    gap: 30%;
+    margin-left: 5%;
 }
 
 .image-item {
