--- a/style.css
+++ b/style.css
@@ -256,11 +256,13 @@ main {
     padding: 10px;
     width: 60%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
 }
 
 #ad-popup img {
     width: 70%;
     height: 400px;
+    border-radius: 8px;
 }
 
 #close-ad-btn {
