--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ button {
     border-radius: 4px;
 }
 
+button:hover {
+    background-color: #cfd0d1;
+}
+
 nav a {
     color: rgb(255, 245, 245);
     margin-left: 10px;
