--- a/style.css
+++ b/style.css
@@ -188,6 +188,11 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
+    margin-top: auto;
+}
+
+footer p {
+    margin: 0;
 }
 
 /* Home Page Styles */
