--- a/style.css
+++ b/style.css
@@ -184,15 +184,11 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: left;
-    padding: 10px;
+    padding: 20px 0;
     position: relative;
     bottom: 0;
     width: 100%;
     margin-top: auto;
-}
-
-footer p {
-    margin: 0;
 }
 
 /* Home Page Styles */
