--- a/style.css
+++ b/style.css
@@ -877,4 +877,10 @@ input, textarea {
     .ad-content {
         width: 90%;
     }
+
+    footer {
+        position: relative;
+        bottom: 0;
+        margin-top: auto;
+    }
 }
