--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     }
 
 /* Header Styles */
@@ -184,7 +187,7 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: left;
-    padding: 20px 0;
+    padding: 20px;
     position: relative;
     bottom: 0;
     width: 100%;
