--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-color: #c1c5c6;
     }
 
 /* Header Styles */
@@ -187,10 +188,9 @@ footer {
     background-color: #333;
     color: #fff;
     text-align: left;
-    padding: 20px;
+    padding: 10px;
     position: relative;
     bottom: 0;
-    width: 100%;
     margin-top: auto;
 }
 
@@ -855,6 +855,8 @@ input, textarea {
     .hamburger-menu {
         padding-left: 5px;
         display: flex; /* Show the hamburger menu */
+        background-color: #ffffff;
+        margin: 0;
     }
 
     /* Show the main navigation when the hamburger menu is clicked */
