--- a/style.css
+++ b/style.css
@@ -323,7 +323,6 @@ main {
     cursor: pointer;
     border-radius: 5px;
     margin-left: 55px;
-    
 }
 
 .login-button:hover {
@@ -887,5 +886,10 @@ input, textarea {
         position: relative;
         bottom: 0;
         margin-top: auto;
+    }
+
+    .login-button {
+        text-align: center;
+        margin: 0 50px;
     }
 }
