--- a/style.css
+++ b/style.css
@@ -892,4 +892,9 @@ input, textarea {
         text-align: center;
         margin: 0 50px;
     }
+
+    .container {
+        margin: 20px 25px;
+    }
+
 }
