--- a/style.css
+++ b/style.css
@@ -914,4 +914,9 @@ input, textarea {
         margin: 40px auto;
     }
 
+    .main-content {
+        display: flex;
+        flex-direction: column;
+    }
+
 }
