--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ header nav a {
 
 /* Footer Styles */
 footer {
-    background-color: #333;
+    background-color: rgb(0, 0, 0);
     color: #fff;
     text-align: left;
     padding: 10px;
