--- a/style.css
+++ b/style.css
@@ -409,17 +409,17 @@ input {
 }
 
 .image-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; /* 3 items per row on larger screens */
     justify-content: space-around;
-    max-width: 800px;
+    max-width: 1100px;
     padding-top: 15px;
-    gap: 30%;
-    margin-left: 5%;
+    gap: 20%;
+    margin-left: 3%;
 }
 
 .image-item {
     text-align: center;
-    margin: 20px;
 }
 
 .image-item img {
@@ -1001,4 +1001,17 @@ input, textarea {
             width: 100%;
             height: 400px;
         }
+
+    
+        .image-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+            margin-left: 5px;
+          }
+        
+          .image-item {
+            margin: 20px;
+          }
+        
 }
