--- a/style.css
+++ b/style.css
@@ -944,7 +944,7 @@ input, textarea {
 
       .location iframe {
         width: 100%;
-        height: auto;
+        height: 300px;
       }
     
 
