--- a/style.css
+++ b/style.css
@@ -878,6 +878,11 @@ input, textarea {
         width: 80%;
     }
 
+    .product img {
+        width: 100%; /* Full width of the product container */
+        height: 320px;
+    }
+
     .see-more {
         text-align: center;
         margin: 20px 0;
