--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ nav a {
     text-decoration: none;
 }
 
+
 /* Suggestions Dropdown Styles */
 .suggestions-dropdown {
     position: absolute;
@@ -238,24 +239,7 @@ main {
 .product button:hover {
     background-color: #919498;
 }
-.see-more {
-    text-align: center;
-    display: flex;
-    margin-top: 20px;
-    margin-left: 45%;
-}
 
-.see-more a {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 8px;
-}
-
-.see-more a:hover {
-    background-color: #045bb8;
-}
 
 /* Ad Popup Styles */
 #ad-popup {
@@ -398,19 +382,13 @@ input {
     border-radius: 4px;
 }
 
-.btnp {
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-left: 0px;
+.button-container {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    margin: 0 46.5%;
 }
 
-.btnp:hover {
-    background-color: #045bb8;
-}
 
 .image-container {
     display: grid;
@@ -895,11 +873,6 @@ input, textarea {
     .product img {
         width: 100%; /* Full width of the product container */
         height: 310px;
-    }
-
-    .see-more {
-        text-align: center;
-        margin: 20px 0;
     }
 
 
