--- a/style.css
+++ b/style.css
@@ -9,9 +9,15 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background-color: #c1c5c6;
+    margin-top: auto;
     }
 
 /* Header Styles */
+
+header {
+    height: 150px;
+}
+
 .header-container {
     font-family: 'Times New Roman', Times, serif;
     background-color: rgb(0, 0, 0);
@@ -243,13 +249,6 @@ main {
     background-color: #045bb8;
 }
 
-/* Specific Main Content for Login Page */
-.main-content {
-    padding: 50px;
-    background-color: #c1c5c6;
-    text-align: center;
-}
-
 
 /* carts.css */
 
@@ -359,60 +358,39 @@ input {
     font-size: 26px;
 }
 
-/* faqs.css */
-
-/* Specific Styles for FAQ Page */
-#faqs {
-    max-width: 1500px;
-    margin: 0 auto;
-    padding: 10px;
-    border-radius: 8px;
-    text-align: left;
+.panel-heading .glyphicon {
+    transform: rotate(180deg);
+    transition: transform 0.3s ease-in-out;
+    margin-right: 10px;
 }
 
-#faqs h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: #333;
-    
+.panel-heading.collapsed .glyphicon {
+    transform: rotate(90deg);
 }
 
-.faq-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 15px;
-    text-align: left;
-}
-
-.faq-table td {
-    border: 1px solid #ddd;
-    padding: 15px;
-    background-color: #f9f9f9;
-    text-align: left;
-    border-radius: 8px;
-}
-
-.faq-table summary {
-    font-weight: bold;
-    cursor: pointer;
-    text-align: left;
-}
-
-.faq-table p {
-    margin: 10px 0 0;
-    text-align: left;
-}
-
-.faq-table a {
-    color: #007bff;
+.panel-title a {
     text-decoration: none;
-    text-align: left;
+    color: inherit;
+    display: flex;
+    align-items: center;
+    padding: 5px 15px;
+    border-radius: 12px;
+    background-color: #f9f9f9;
+    cursor: pointer;
 }
 
-.faq-table a:hover {
-    text-decoration: underline;
-    text-align: left;
+.panel-title a:hover {
+    background-color: #f1f1f1;
 }
+
+/* Main content styling */
+.main-content {
+    background-color: #c1c5c6; /* Match background color to body */
+    padding: 20px; /* Add padding for spacing inside the main content */
+    margin: 0; /* Remove margin to avoid gaps */
+    min-height: calc(100vh - 120px); /* Adjust height to ensure it covers the page, accounting for header and footer height */
+}
+
 
 /* contact.css */
 
@@ -710,6 +688,10 @@ input, textarea {
 
 /* Responsive design for mobile */
 @media only screen and (max-width: 768px) {
+    header {
+        height: 287px;
+    }
+
     .header-flex {
         flex-direction: column;
         align-items: center;
@@ -777,9 +759,6 @@ input, textarea {
         margin: 40px auto;
     }
 
-    .main-content {
-        padding-top: 30px;
-    }
 
 
 
