--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ input {
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    margin: 0 43%;
+    margin: 0 46.5%;
 }
 
 
@@ -715,9 +715,16 @@ input, textarea {
         align-items: center;
     }
 
+    .button-container {
+        display: flex;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        margin: 0 40%;
+    }
+
     .product {
         width: 80%;
-        margin-right: 23px;
+        margin-right: 0;
     }
 
     .product img {
