--- a/style.css
+++ b/style.css
@@ -151,6 +151,11 @@ main {
     border-radius: 8px;
 }
 
+.product img {
+    width: 100%;
+    height: 270px;
+}
+
 .product button {
     padding: 5px 10px;
     margin: 5px 0;
@@ -703,6 +708,10 @@ input, textarea {
         justify-content: center;
     }
 
+    .product img {
+        width: 100%;
+        height: 300px;
+    }
 
     .products-container {
         flex-direction: column;
